--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "type": "module",
     "description": "Node.js application with Electron, microservices, and BDD",
+    "main": "ui/src/main.js",
     "scripts": {
         "start": "electron .",
         "test": "CUCUMBER_PUBLISH_TOKEN=183135b2-77a0-4d98-9070-8a1c96a6e4e2 cucumber-js && npm run test:contracts",
