--- a/.github/workflows/main_branch.yml
+++ b/.github/workflows/main_branch.yml
@@ -30,5 +30,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: echo "${{ env.secrets.CUCUMBER_PUBLISH_TOKEN }}"
+    - run: echo "${{ env.CUCUMBER_PUBLISH_TOKEN }}"
     - run: npm test
