--- a/.github/workflows/main_branch.yml
+++ b/.github/workflows/main_branch.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
       env:
-          CUCUMBER_PUBLISH_TOKEN: 183135b2-77a0-4d98-9070-8a1c96a6e4e2
+          CUCUMBER_PUBLISH_TOKEN: ${{ github.ref == 'refs/heads/main' && '183135b2-77a0-4d98-9070-8a1c96a6e4e2' || '' }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
