--- a/.github/workflows/main_branch.yml
+++ b/.github/workflows/main_branch.yml
@@ -30,5 +30,5 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: echo "${{ env.CUCUMBER_PUBLISH_TOKEN }}"
+    - run: echo "${{ process.env.CUCUMBER_PUBLISH_TOKEN }}"
     - run: cross-env CUCUMBER_PUBLISH_TOKEN=183135b2-77a0-4d98-9070-8a1c96a6e4e2 && npm test
