--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "@pact-foundation/pact-node": "^10.18.0",
         "chai": "^4.3.6",
         "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
         "electron": "^32.0.0",
         "electron-is-dev": "^3.0.1",
         "electron-reload": "^1.5.0",
+        "env": "^0.0.2",
         "mocha": "^10.0.0"
     },
     "repository": {
